[package]
name = "find-roots"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
console = "0.15.5"
indicatif = "0.17.3"
nalgebra = "0.32.2"
num-dual = "0.7.1"
num-traits = "0.2.15"
plotters = "0.3.4"
rayon = "1.7.0"
rusty-rootsearch = "0.3.1"
